force-app/main/default/objects/adobesign__Related_Object_Mapping__c/fields/adobesign__Object_Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Object_Field_Mapping__c</fullName>
    <label>Object Field Mappings</label>
    <referenceTo>adobesign__Object_Field_Mapping__c</referenceTo>
    <relationshipLabel>Related Object Mappings</relationshipLabel>
    <relationshipName>Contract_Builder_Related_Object_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>