force-app/main/default/objects/adobesign__Related_Object_Mapping__c/fields/adobesign__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>