force-app/main/default/objects/adobesign__Related_Object_Mapping__c/fields/adobesign__Object_Reference_Path__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Object_Reference_Path__c</fullName>
    <description>The lookup field name in related object.</description>
    <label>Object Reference Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>