force-app/main/default/objects/adobesign__Related_Object_Mapping__c/fields/adobesign__Sorting_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Sorting_Field_Name__c</fullName>
    <label>Sorting Field Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>