force-app/main/default/objects/adobesign__Related_Object_Mapping__c/fields/adobesign__Sorting_Order__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Sorting_Order__c</fullName>
    <label>Sorting Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ascending</fullName>
                <default>true</default>
                <label>Ascending</label>
            </value>
            <value>
                <fullName>Descending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>